--- a/src/components/.env
+++ b/src/components/.env
@@ -1,1 +1,1 @@
-PUBLIC_URL = 753509cc76mshc1eb82eaadf9ca1p115b84jsnfe7e733e7e61
+REACT_APP_API_KEY = c198456b72msh84672f2444a4876p16fe3cjsn0b5d462d1315
